# laboratorio-di-programmazione

./: Activity.h  CMakeLists.txt  Register.h  mainwindow.cpp  mainwindow.h
src/: Activity.h  Register.h  mainwindow.cpp  mainwindow.h
test/: TestActivity.cpp  TestRegister.cpp
